# tp4-homografia

./: README.md  pyproject.toml  requirements.txt
src/tp4_homografia/: application.py  main.py
src/tp4_homografia/domain/: __init__.py  homography.py  state.py  state_event.py  state_machine.py
src/tp4_homografia/domain/state_machine/: __init__.py  state_event.py  state_machine.py
src/tp4_homografia/domain/state_machine/states/: __init__.py  abstract.py  final.py  manual_selection.py  qr_selection.py  visualization.py
src/tp4_homografia/infrastructure/: camera.py
src/tp4_homografia/interaction/: __init__.py  input_controller.py
src/tp4_homografia/services/: __init__.py  opencv.py
src/tp4_homografia/services/homography/: __init__.py  abstract.py
src/tp4_homografia/services/qr/: __init__.py  abstract.py  opencv_qr_detector.py
src/tp4_homografia/services/rendering/: __init__.py  grid_renderer.py  warp_renderer.py
src/tp4_homografia/states/: __init__.py  final.py  manual_selection.py  visualization.py
